@@ -1,3 +1,8 @@
+2009-01-12  Thorsten Meyer  <thorsten.meyier@gmx.de>
+
+	* strings/strvcat.m: Remove.
+	* strings/Makefile.in (SOURCES): Remove strvcat.m.
+	
 2009-01-12  John W. Eaton  <jwe@octave.org>
 
 	* plot/diffuse.m, plot/surfl.m, plot/specular.m: Style fixes.
